--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,8 @@
 .navbar {
-  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2) !important;
 }
 .dark .navbar {
-  box-shadow: 0 2px 2px -2px rgba(255, 255, 255, 0.1);
+  box-shadow: 0 2px 2px -2px rgba(255, 255, 255, 0.1) !important;
 }
 
 .dark .avatar {
